MiniJava/starter_code/_build/parser.automaton
State 0:
program' -> . program [ # ]
-- On CLASS shift to state 1
-- On program shift to state 91
-- On main_class shift to state 92

State 1:
main_class -> CLASS . IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On IDENT shift to state 2

State 2:
main_class -> CLASS IDENT . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On LBRACE shift to state 3

State 3:
main_class -> CLASS IDENT LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On PUBLIC shift to state 4

State 4:
main_class -> CLASS IDENT LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On STATIC shift to state 5

State 5:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On VOID shift to state 6

State 6:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On MAIN shift to state 7

State 7:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On LPAREN shift to state 8

State 8:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On STRING shift to state 9

State 9:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On LBRACKET shift to state 10

State 10:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On RBRACKET shift to state 11

State 11:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On IDENT shift to state 12

State 12:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT . RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On RPAREN shift to state 13

State 13:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN . LBRACE statement RBRACE RBRACE [ EOF CLASS ]
-- On LBRACE shift to state 14

State 14:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE . statement RBRACE RBRACE [ EOF CLASS ]
-- On WHILE shift to state 15
-- On SYSO shift to state 60
-- On LBRACE shift to state 65
-- On IF shift to state 66
-- On IDENT shift to state 70
-- On statement shift to state 88

State 15:
statement -> WHILE . LPAREN expression RPAREN statement [ WHILE SYSO RETURN RBRACE LBRACE IF IDENT ELSE ]
-- On LPAREN shift to state 16

State 16:
statement -> WHILE LPAREN . expression RPAREN statement [ WHILE SYSO RETURN RBRACE LBRACE IF IDENT ELSE ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 58

State 17:
raw_expression -> THIS . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> THIS 
-- On SEMICOLON reduce production raw_expression -> THIS 
-- On RPAREN reduce production raw_expression -> THIS 
-- On RBRACKET reduce production raw_expression -> THIS 
-- On PLUS reduce production raw_expression -> THIS 
-- On MINUS reduce production raw_expression -> THIS 
-- On LT reduce production raw_expression -> THIS 
-- On LBRACKET reduce production raw_expression -> THIS 
-- On DOT reduce production raw_expression -> THIS 
-- On COMMA reduce production raw_expression -> THIS 
-- On AND reduce production raw_expression -> THIS 

State 18:
raw_expression -> NOT . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 57

State 19:
raw_expression -> NEW . INTEGER LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> NEW . IDENT LPAREN RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On INTEGER shift to state 20
-- On IDENT shift to state 54

State 20:
raw_expression -> NEW INTEGER . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On LBRACKET shift to state 21

State 21:
raw_expression -> NEW INTEGER LBRACKET . expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 52

State 22:
expression -> LPAREN . expression RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 27

State 23:
raw_expression -> INT_CONST . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> INT_CONST 
-- On SEMICOLON reduce production raw_expression -> INT_CONST 
-- On RPAREN reduce production raw_expression -> INT_CONST 
-- On RBRACKET reduce production raw_expression -> INT_CONST 
-- On PLUS reduce production raw_expression -> INT_CONST 
-- On MINUS reduce production raw_expression -> INT_CONST 
-- On LT reduce production raw_expression -> INT_CONST 
-- On LBRACKET reduce production raw_expression -> INT_CONST 
-- On DOT reduce production raw_expression -> INT_CONST 
-- On COMMA reduce production raw_expression -> INT_CONST 
-- On AND reduce production raw_expression -> INT_CONST 

State 24:
raw_expression -> IDENT . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> IDENT 
-- On SEMICOLON reduce production raw_expression -> IDENT 
-- On RPAREN reduce production raw_expression -> IDENT 
-- On RBRACKET reduce production raw_expression -> IDENT 
-- On PLUS reduce production raw_expression -> IDENT 
-- On MINUS reduce production raw_expression -> IDENT 
-- On LT reduce production raw_expression -> IDENT 
-- On LBRACKET reduce production raw_expression -> IDENT 
-- On DOT reduce production raw_expression -> IDENT 
-- On COMMA reduce production raw_expression -> IDENT 
-- On AND reduce production raw_expression -> IDENT 

State 25:
raw_expression -> BOOL_CONST . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> BOOL_CONST 
-- On SEMICOLON reduce production raw_expression -> BOOL_CONST 
-- On RPAREN reduce production raw_expression -> BOOL_CONST 
-- On RBRACKET reduce production raw_expression -> BOOL_CONST 
-- On PLUS reduce production raw_expression -> BOOL_CONST 
-- On MINUS reduce production raw_expression -> BOOL_CONST 
-- On LT reduce production raw_expression -> BOOL_CONST 
-- On LBRACKET reduce production raw_expression -> BOOL_CONST 
-- On DOT reduce production raw_expression -> BOOL_CONST 
-- On COMMA reduce production raw_expression -> BOOL_CONST 
-- On AND reduce production raw_expression -> BOOL_CONST 

State 26:
expression -> raw_expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production expression -> raw_expression 
-- On SEMICOLON reduce production expression -> raw_expression 
-- On RPAREN reduce production expression -> raw_expression 
-- On RBRACKET reduce production expression -> raw_expression 
-- On PLUS reduce production expression -> raw_expression 
-- On MINUS reduce production expression -> raw_expression 
-- On LT reduce production expression -> raw_expression 
-- On LBRACKET reduce production expression -> raw_expression 
-- On DOT reduce production expression -> raw_expression 
-- On COMMA reduce production expression -> raw_expression 
-- On AND reduce production expression -> raw_expression 

State 27:
expression -> LPAREN expression . RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . PLUS expression [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . MINUS expression [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . TIMES expression [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LT expression [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . AND expression [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT LENGTH [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES RPAREN PLUS MINUS LT LBRACKET DOT AND ]
-- On TIMES shift to state 28
-- On RPAREN shift to state 34
-- On PLUS shift to state 35
-- On MINUS shift to state 37
-- On LT shift to state 30
-- On LBRACKET shift to state 39
-- On DOT shift to state 42
-- On AND shift to state 32

State 28:
raw_expression -> expression TIMES . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 29

State 29:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression TIMES expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On LT shift to state 30
-- On AND shift to state 32
-- On TIMES reduce production raw_expression -> expression TIMES expression 
-- On SEMICOLON reduce production raw_expression -> expression TIMES expression 
-- On RPAREN reduce production raw_expression -> expression TIMES expression 
-- On RBRACKET reduce production raw_expression -> expression TIMES expression 
-- On PLUS reduce production raw_expression -> expression TIMES expression 
-- On MINUS reduce production raw_expression -> expression TIMES expression 
-- On LBRACKET reduce production raw_expression -> expression TIMES expression 
-- On DOT reduce production raw_expression -> expression TIMES expression 
-- On COMMA reduce production raw_expression -> expression TIMES expression 

State 30:
raw_expression -> expression LT . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 31

State 31:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression LT expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> expression LT expression 
-- On SEMICOLON reduce production raw_expression -> expression LT expression 
-- On RPAREN reduce production raw_expression -> expression LT expression 
-- On RBRACKET reduce production raw_expression -> expression LT expression 
-- On PLUS reduce production raw_expression -> expression LT expression 
-- On MINUS reduce production raw_expression -> expression LT expression 
-- On LBRACKET reduce production raw_expression -> expression LT expression 
-- On DOT reduce production raw_expression -> expression LT expression 
-- On COMMA reduce production raw_expression -> expression LT expression 
-- On AND reduce production raw_expression -> expression LT expression 

State 32:
raw_expression -> expression AND . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 33

State 33:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression AND expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On LT shift to state 30
-- On TIMES reduce production raw_expression -> expression AND expression 
-- On SEMICOLON reduce production raw_expression -> expression AND expression 
-- On RPAREN reduce production raw_expression -> expression AND expression 
-- On RBRACKET reduce production raw_expression -> expression AND expression 
-- On PLUS reduce production raw_expression -> expression AND expression 
-- On MINUS reduce production raw_expression -> expression AND expression 
-- On LBRACKET reduce production raw_expression -> expression AND expression 
-- On DOT reduce production raw_expression -> expression AND expression 
-- On COMMA reduce production raw_expression -> expression AND expression 
-- On AND reduce production raw_expression -> expression AND expression 

State 34:
expression -> LPAREN expression RPAREN . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production expression -> LPAREN expression RPAREN 
-- On SEMICOLON reduce production expression -> LPAREN expression RPAREN 
-- On RPAREN reduce production expression -> LPAREN expression RPAREN 
-- On RBRACKET reduce production expression -> LPAREN expression RPAREN 
-- On PLUS reduce production expression -> LPAREN expression RPAREN 
-- On MINUS reduce production expression -> LPAREN expression RPAREN 
-- On LT reduce production expression -> LPAREN expression RPAREN 
-- On LBRACKET reduce production expression -> LPAREN expression RPAREN 
-- On DOT reduce production expression -> LPAREN expression RPAREN 
-- On COMMA reduce production expression -> LPAREN expression RPAREN 
-- On AND reduce production expression -> LPAREN expression RPAREN 

State 35:
raw_expression -> expression PLUS . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 36

State 36:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression PLUS expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES shift to state 28
-- On MINUS shift to state 37
-- On LT shift to state 30
-- On AND shift to state 32
-- On SEMICOLON reduce production raw_expression -> expression PLUS expression 
-- On RPAREN reduce production raw_expression -> expression PLUS expression 
-- On RBRACKET reduce production raw_expression -> expression PLUS expression 
-- On PLUS reduce production raw_expression -> expression PLUS expression 
-- On LBRACKET reduce production raw_expression -> expression PLUS expression 
-- On DOT reduce production raw_expression -> expression PLUS expression 
-- On COMMA reduce production raw_expression -> expression PLUS expression 

State 37:
raw_expression -> expression MINUS . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 38

State 38:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression MINUS expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES shift to state 28
-- On LT shift to state 30
-- On AND shift to state 32
-- On SEMICOLON reduce production raw_expression -> expression MINUS expression 
-- On RPAREN reduce production raw_expression -> expression MINUS expression 
-- On RBRACKET reduce production raw_expression -> expression MINUS expression 
-- On PLUS reduce production raw_expression -> expression MINUS expression 
-- On MINUS reduce production raw_expression -> expression MINUS expression 
-- On LBRACKET reduce production raw_expression -> expression MINUS expression 
-- On DOT reduce production raw_expression -> expression MINUS expression 
-- On COMMA reduce production raw_expression -> expression MINUS expression 

State 39:
raw_expression -> expression LBRACKET . expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 40

State 40:
raw_expression -> expression . PLUS expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . MINUS expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . TIMES expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LT expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . AND expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression LBRACKET expression . RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES RBRACKET PLUS MINUS LT LBRACKET DOT AND ]
-- On TIMES shift to state 28
-- On RBRACKET shift to state 41
-- On PLUS shift to state 35
-- On MINUS shift to state 37
-- On LT shift to state 30
-- On LBRACKET shift to state 39
-- On DOT shift to state 42
-- On AND shift to state 32

State 41:
raw_expression -> expression LBRACKET expression RBRACKET . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET DOT COMMA AND ]
-- On TIMES reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On SEMICOLON reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On RPAREN reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On RBRACKET reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On PLUS reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On MINUS reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On LT reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On LBRACKET reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On DOT reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On COMMA reduce production raw_expression -> expression LBRACKET expression RBRACKET 
-- On AND reduce production raw_expression -> expression LBRACKET expression RBRACKET 
